Pushing updated CSS and HTML files.

--- a/index.html
+++ b/index.html
@@ -1,79 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Courtney Downs' Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">    
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <!-- Nav Bar -->
 
-<!-- Nav Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <!-- <nav class="navbar"> -->
+      <div class="container-fluid">
+        <h1 class="my-name-navbar-brand">COURTNEY DOWNS</h1>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="navLink" aria-current="page" href="#">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="navLink" href="#">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a class="navLink" href="#">CREDO</a>
+            </li>
+            <li class="nav-item">
+              <a class="navLink" href="#">SKILLS</a>
+            </li>
+            <li class="nav-item">
+              <a class="navLink" href="#">PORTFOLIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="navLink" href="#">RESUME</a>
+            </li>
+            <li class="nav-item">
+              <a class="navLink" href="#">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <!-- <nav class="navbar"> -->
-    <div class="container-fluid">
-      <h1 class="my-name-navbar-brand">COURTNEY DOWNS</h1>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="navLink" aria-current="page" href="#">HOME</a>
-          </li>
-          <li class="nav-item">
-            <a class="navLink" href="#">ABOUT</a>
-          </li>
-          <li class="nav-item">
-            <a class="navLink" href="#">CREDO</a>
-          </li>
-          <li class="nav-item">
-            <a class="navLink" href="#">SKILLS</a>
-          </li>
-          <li class="nav-item">
-            <a class="navLink" href="#">PORTFOLIO</a>
-          </li>
-          <li class="nav-item">
-            <a class="navLink" href="#">RESUME</a>
-        </li>
-        <li class="nav-item">
-          <a class="navLink" href="#">CONTACT</a>
-          </li>
-        </ul>
+    <!-- HERO LANDING PAGE -->
+
+    <div class="hero">
+      <!-- <img src="../PortfolioProject/assets/background-header-original.jpeg" class="hero-image"> -->
+      <div class="hero-content">
+        <img src="assets/LogoWhite.png" class="logo-image" />
       </div>
     </div>
-  </nav>
 
-  <!-- HERO LANDING PAGE -->
+    <!-- ABOUT ME -->
+    <section id="about" class=about-section-padding>
+      <div class="container-text-center"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-m4-4 mb-sm-30">
+            <p class="about-me-para-1"></p>
+          </div>
+          <div class="col-md-4-sm-30">
+            <p class="about-me-para-2"></p>
+          </div>
+          <div class="col-md-4-sm-30">
+            <p class="about-me-para-3"></p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <div class="hero">
-      <!-- <img src="../PortfolioProject/assets/background-header-original.jpeg" class="hero-image"> -->
-    <div class="hero-content">
-      <img src="assets/LogoWhite.png" class="logo-image">
-    </div>  
-  </div>
+    <!-- MY CREDO -->
+    <section id="credo-wrapper">
+    <div class="credo-divs">
+      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
+      <h1>1</h1>
+      <h3>Imagine the Unimaginable</h>
+      <p class="credo-para"></p>
+    </div>
+    <div class="credo-divs">
+      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
+      <h1>1</h1>
+      <h3>Imagine the Unimaginable</h>
+      <p class="credo-para"></p>
+    </div>
+    <div class="credo-divs">
+      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
+      <h1>1</h1>
+      <h3>Imagine the Unimaginable</h>
+      <p class="credo-para"></p>
+    </div>
+    </section>
 
-  <!-- ABOUT ME -->
-  <div class="about-me">
-    <h1>About Me</h1>
-  </div>
-
-  <!-- CREDO -->
-  <div class="credo">
-      <h1>Credo</h1>
-  </div>
-
-  <!-- <div class="bg-image" style="background-image: url('../PortfolioProject/assets/background-header-original.jpeg');
+    <!-- <div class="bg-image" style="background-image: url('../PortfolioProject/assets/background-header-original.jpeg');
     height: 100vh;"></div> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-</body>
+  </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
