adding recentely updated changes to hero.cc and index.html files

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           aria-controls="navbarNav"
           aria-expanded="false"
           aria-label="Toggle navigation"
-        >
+        > 
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -76,7 +76,7 @@
 
     <!-- HERO LANDING PAGE -->
 
-    <div class="hero">
+    <div class="hero container-fluid">
       <!-- <img src="../PortfolioProject/assets/background-header-original.jpeg" class="hero-image"> -->
       <div class="hero-content">
         <img src="assets/LogoWhite.png" class="logo-image" />
@@ -84,7 +84,7 @@
     </div>
 
     <!-- ABOUT ME -->
-    <section id="about" class=about-section-padding>
+    <section id="about" class="container-fluid">
       <div class="container-text-center"></div>
       <div class="container">
         <div class="row">
@@ -102,10 +102,40 @@
     </section>
 
     <!-- MY CREDO -->
-    <section id="credo-wrapper">
+    <section id="credo-wrapper" class="container-fluid">
     <div class="credo-divs">
       <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
       <h1>1</h1>
+      <h3>Imagine the Unimaginable</h>
+      <p class="credo-para"></p>
+    </div>
+    <div class="credo-divs">
+      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
+      <h1>1</h1>
+      <h3>Imagine the Unimaginable</h>
+      <p class="credo-para"></p>
+    </div>
+    <div class="credo-divs">
+      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
+      <h1>1</h1>
+      <h3>Imagine the Unimaginable</h>
+      <p class="credo-para"></p>
+    </div>
+    <div class="credo-divs">
+      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
+      <h1>1</h1>
+      <h3>Imagine the Unimaginable</h>
+      <p class="credo-para"></p>
+    </div>
+    <div class="credo-divs">
+      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
+      <h1>1</h1>
+      <h3>Imagine the Unimaginable</h>
+      <p class="credo-para"></p>
+    </div>
+    <div class="credo-divs">
+      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
+      <h1 class="1"</h1>
       <h3>Imagine the Unimaginable</h>
       <p class="credo-para"></p>
     </div>
@@ -123,9 +153,27 @@
     </div>
     </section>
 
+    <!-- SKILLSET -->
+    <section id="skillset-wrapper" class="container-fluid"> (style in column, witdth of 100%)
+      <h1>"My Skillset"</h1>
+      <div id="skills-wrapper"> 
+      <div class="skills">
+        <i class="fas fa-code" set font size and color></i>
+        <h3>HTML/CSS</h3>
+      </div>
+      <div class="skills">
+        <i class="" set font size and color></i>
+        <h3>JavaScript</h3>
+      </div>
+      <div class="skills">
+        <i class="" set font size and color></i>
+        <h3></h3>
+      </div>
+    </div>
+    </section>
+
     <!-- <div class="bg-image" style="background-image: url('../PortfolioProject/assets/background-header-original.jpeg');
     height: 100vh;"></div> -->
-  </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
