--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <!-- <nav class="navbar"> -->
-      <div class="container-fluid">
+      <div class="container">
         <h1 class="my-name-navbar-brand">COURTNEY DOWNS</h1>
         <button
           class="navbar-toggler"
@@ -76,7 +76,7 @@
 
     <!-- HERO LANDING PAGE -->
 
-    <div class="hero container-fluid">
+    <div class="hero">
       <!-- <img src="../PortfolioProject/assets/background-header-original.jpeg" class="hero-image"> -->
       <div class="hero-content">
         <img src="assets/LogoWhite.png" class="logo-image" />
@@ -84,77 +84,152 @@
     </div>
 
     <!-- ABOUT ME -->
-    <section id="about" class="container-fluid">
-      <div class="container-text-center"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-m4-4 mb-sm-30">
-            <p class="about-me-para-1"></p>
+    <section id="about-me" class="section-padding">
+      <div class="container text-center">
+        <h3>About Me</h3>
+        <div class="container">
+          <div class=row>
+          <div class="col-4-sm">
+            <p class="para 1">"Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last."</p>
           </div>
-          <div class="col-md-4-sm-30">
-            <p class="about-me-para-2"></p>
+          <div class="col-4-sm">
+            <p class="para 2">"Half-giant jinxes peg-leg gillywater broken glasses large black dog Great Hall. Nearly-Headless Nick now string them together, and answer me this, which creature would you be unwilling to kiss? Poltergeist sticking charm, troll umbrella stand flying cars golden locket Lily Potter. Pumpkin juice Trevor wave your wand out glass orbs, a Grim knitted hats. Stan Shunpike doe patronus, suck his soul Muggle-Born large order of drills the trace. Bred in captivity fell through the veil, quaffle blue flame ickle diddykins Aragog. Yer a wizard, Harry Doxycide the woes of Mrs. Weasley Goblet of Fire."</p>
           </div>
-          <div class="col-md-4-sm-30">
-            <p class="about-me-para-3"></p>
+          <div class="col-4-sm">
+            <p class="para 3">"Shameless self-promo"</p>
           </div>
         </div>
       </div>
-    </section>
-
+</section>
+<div class="gray-line"></div><hr/>
     <!-- MY CREDO -->
-    <section id="credo-wrapper" class="container-fluid">
+
+    <!-- <section id="credo-wrapper">
+      <div class=h1-title>Credo</div>
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="credo-divs">
+            <div class="h1-credo">01</div>
+            <img class="credo-image-imagine" src="../PortfolioProject/assets/Imagine.png" width=/>
+            <div class=h3-section>Imagine the Unimaginable</div>
+            <p class="credo-para">TEST. TEST. TEST</p>
+          </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="credo-divs">
+            <div class="h1-credo">02</div>
+            <img class="credo-image-enthusiasm" src="../PortfolioProject/assets/Enthusiasm.png" width=/>
+            <<div class=h3-section>Enthusiasm</div>
+            <p class="credo-para">TEST. TEST. TEST</p>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="credo-divs">
+            <div class="h1-credo">03</div>
+            <img class="credo-image-detail" src="../PortfolioProject/assets/Detail Oriented Planning.png" width=/>
+            <div class=h3-section>Detail Oriented</div>
+            <p class="credo-para">TEST. TEST. TEST</p>
+          </div>
+          </div> 
+        <div class="col-sm-4">
+          <div class="credo-divs">
+            <div class="h1-credo">04</div>
+            <img class="credo-image-dedication" src="../PortfolioProject/assets/Dedication.png" width=/>
+            <div class=h3-section>Dedication</div>
+            <p class="credo-para">TEST. TEST. TEST</p>
+          </div>
+        </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="credo-divs">
+            <div class="h1-credo">05</div>
+            <img class="credo-image-communication" src="../PortfolioProject/assets/Communication - 1.png" width=/>
+            <div class=h3-section>Communication</div>
+            <p class="credo-para">TEST. TEST. TEST</p>
+          </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="credo-divs">
+            <div class="h1-credo">06</div>
+            <img class="credo-image-teamwork" src="../PortfolioProject/assets/Teamwork.png" width=/>
+            <<div class=h3-section>Teamwork</div>
+            <p class="credo-para">TEST. TEST. TEST</p>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="credo-divs">
+            <div class="h1-credo">07</div>
+            <img class="credo-image-perfection" src="../PortfolioProject/assets/Perfection.png" width=/>
+            <div class=h3-section>Strive for Perfection</div>
+            <p class="credo-para">TEST. TEST. TEST</p>
+        </div>
+        <div class="col-sm-4">
+        <div class="credo-divs">
+          <div class="h1-credo">08</div>
+          <img class="credo-image-success" src="../PortfolioProject/assets/Success - 2.png" width=/>
+          <div class=h3-section>Success</div>
+          <p class="credo-para">TEST. TEST. TEST</p>
+        </div>
+      </div>
+        </section> -->
+    <div class=h1-title>Credo</div>
+
+    <section id="credo-wrapper" class="container">
     <div class="credo-divs">
-      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
-      <h1>1</h1>
-      <h3>Imagine the Unimaginable</h>
-      <p class="credo-para"></p>
+      <div class="h1-credo">01</div>
+      <img class="credo-image" src="../PortfolioProject/assets/pink imagination.png" width=/>
+      <div class=h3-section>Imagine</div>
+      <p class="credo-para">TEST. TEST. TEST</p>
     </div>
     <div class="credo-divs">
-      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
-      <h1>1</h1>
-      <h3>Imagine the Unimaginable</h>
-      <p class="credo-para"></p>
+      <div class="h1-credo">02</div>
+      <img class="credo-image" src="../PortfolioProject/assets/pink enthusiasm.png" width=/>
+      <div class=h3-section>Enthusiasm</div>
+      <p class="credo-para">TEST. TEST. TEST</p>
     </div>
     <div class="credo-divs">
-      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
-      <h1>1</h1>
-      <h3>Imagine the Unimaginable</h>
-      <p class="credo-para"></p>
+      <div class="h1-credo">03</div>
+      <img class="credo-image" src="../PortfolioProject/assets/pink detail oriented.png" width=/>
+      <div class=h3-section>Detail Oriented</div>
+      <p class="credo-para">TEST. TEST. TEST</p>
     </div>
     <div class="credo-divs">
-      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
-      <h1>1</h1>
-      <h3>Imagine the Unimaginable</h>
-      <p class="credo-para"></p>
+      <div class="h1-credo">04</div>
+      <img class="credo-image" src="../PortfolioProject/assets/pink dedication.png" width=/>
+      <div class=h3-section>Dedication</div>
+      <p class="credo-para">TEST. TEST. TEST</p>
     </div>
     <div class="credo-divs">
-      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
-      <h1>1</h1>
-      <h3>Imagine the Unimaginable</h>
-      <p class="credo-para"></p>
+      <div class="h1-credo">05</div>
+      <img class="credo-image" src="../PortfolioProject/assets/pink communication icon.png" width=/>
+      <div class=h3-section>Communication</div>
+      <p class="credo-para">TEST. TEST. TEST</p>
     </div>
     <div class="credo-divs">
-      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
-      <h1 class="1"</h1>
-      <h3>Imagine the Unimaginable</h>
-      <p class="credo-para"></p>
+      <div class="h1-credo">06</div>
+      <img class="credo-image" src="../PortfolioProject/assets/pink teamwork.png" width=/>
+      <div class=h3-section>Teamwork</div>
+      <p class="credo-para">TEST. TEST. TEST</p>
     </div>
     <div class="credo-divs">
-      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
-      <h1>1</h1>
-      <h3>Imagine the Unimaginable</h>
-      <p class="credo-para"></p>
+      <div class="h1-credo">07</div>
+      <img class="credo-image" src="../PortfolioProject/assets/pink perfect.png" width=/>
+      <div class=h3-section>Strive for Perfection</div>
+      <p class="credo-para">TEST. TEST. TEST</p>
     </div>
     <div class="credo-divs">
-      <img class="credo-image" src="../PortfolioProject/assets/Imagine.png" width=/>
-      <h1>1</h1>
-      <h3>Imagine the Unimaginable</h>
-      <p class="credo-para"></p>
+      <div class="h1-credo">08</div>
+      <img class="credo-image" src="../PortfolioProject/assets/pink success.png" width=/>
+      <div class=h3-section>Success</div>
+      <p class="credo-para">TEST. TEST. TEST</p>
     </div>
-    </section>
+  </div>
+    
 
     <!-- SKILLSET -->
-    <section id="skillset-wrapper" class="container-fluid"> (style in column, witdth of 100%)
+    <!-- <section id="skillset-wrapper" class="container">
       <h1>"My Skillset"</h1>
       <div id="skills-wrapper"> 
       <div class="skills">
@@ -170,10 +245,55 @@
         <h3></h3>
       </div>
     </div>
-    </section>
+    </section> -->
 
-    <!-- <div class="bg-image" style="background-image: url('../PortfolioProject/assets/background-header-original.jpeg');
-    height: 100vh;"></div> -->
+    <!-- <section id="portfolio-wrapper">
+      <div class="container">
+        <h1>My Portfolio</h1>
+      </div>
+      <div id="zero-gutters-portfolio-block-gallery">
+        <div class="col-lg-3 col-med-6 col-sm-6">
+          <a class = "portfolio-project-square"
+            href target="blank">
+            <img class ="img-fluid" src="" alt>          
+          <div class="portfolio-project-headline">
+            <div class="portfolio-project-headline-summary">
+              <div class="project-title">INSERT TITLE HERE</div>
+              <div class="project-tagline">INSERT TAGLINE HERE</div>
+              <div class="project-description">INSERT DESCRIPTION HERE</div>
+            </div>
+          </div>
+        </div>
+        </a>
+          <div class="col-lg-3- col-md-6 col-sm-6">
+            <a class = "portfolio-project-square"
+            href target="blank">
+            <img class ="img-fluid" src="" alt>          
+          <div class="portfolio-project-headline">
+            <div class="portfolio-project-headline-summary">
+              <div class="project-title">INSERT TITLE HERE</div>
+              <div class="project-tagline">INSERT TAGLINE HERE</div>
+              <div class="project-description">INSERT DESCRIPTION HERE</div>
+            </div>
+          </div>
+        </div>
+        </a>
+            <div class="col-lg-3- col-md-6 col-sm-6">
+              <a class = "portfolio-project-square"
+            href target="blank">
+            <img class ="img-fluid" src="" alt>          
+          <div class="portfolio-project-headline">
+            <div class="portfolio-project-headline-summary">
+              <div class="project-title">INSERT TITLE HERE</div>
+              <div class="project-tagline">INSERT TAGLINE HERE</div>
+              <div class="project-description">INSERT DESCRIPTION HERE</div>
+            </div>
+          </div>
+        </div>
+        </a> -->
+<!-- Insert link to project and stylize thumbnail -->
+<!-- </section> -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
