--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </section>
 
   <!-- MY CREDO -->
-  <section id="credo-wrapper" class="container section-padding">
+  <div class="container section-padding">
     <h1 class="my-credo-title">My Credo</h1>
     <div class="row g-2">
       <div class="col-md-3">
@@ -193,12 +193,12 @@
         </div>
       </div>
     </div>
-  </section>
+    </section>
 
-  <hr style="width: 100%; color: var(--indigo)" />
+    <hr style="width: 100%; color: var(--indigo)" />
 
-  <!-- SKILLSET -->
-  <!-- <section id="skillset-wrapper" class="container skillset-container">
+    <!-- SKILLSET -->
+    <!-- <section id="skillset-wrapper" class="container skillset-container">
       <h1 class="h1-my-skillset">My Skill Set</h1>
         <div class="row">
           <div class="col-md-3">
@@ -293,62 +293,62 @@
     </div>
   </section> -->
 
-  <section id="skillset-wrapper" class="container skillset-container section-padding">
-    <h1 class="h1-my-skillset">My Skill Set</h1>
-    <div class="row g-2">
-      <div class="col-md-3">
-        <div class="html5css" id="skills-div" onclick="skillHTML()">
-          <i class="fab fa-html5" id="fa-html5" style="font-size: 60px;"></i>
-          <p class="skill-text html5css" id="html-css">HTML & CSS</p>
-          <p id="skill-html">text. test. test.</p>
+    <section id="skillset-wrapper" class="container skillset-container section-padding">
+      <h1 class="h1-my-skillset">My Skill Set</h1>
+      <div class="row g-2">
+        <div class="col-md-3">
+          <div class="html5css" id="skills-div" onclick="skillHTML()">
+            <i class="fab fa-html5" id="fa-html5" style="font-size: 60px;"></i>
+            <p class="skill-text html5css" id="html-css">HTML & CSS</p>
+            <p id="skill-html">text. test. test.</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="bootstrap" id="skills-div" onclick="skillBootstrap()">
+            <i class="fab fa-bootstrap" id="fa-bootstrap" style="font-size: 60px;"></i>
+            <p class="skill-text bootstrap" id="bootstrap-5">BOOTSTRAP</p>
+            <p id="skill-bootstrap">text. test. test.</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="wireframe" id="skills-div" onclick="skillWireframe()">
+            <i class="far fa-edit" id="fa-edit" style="font-size: 60px;"></i>
+            <p class="skill-text wireframe" id="wire-frame">WIREFRAMING</p>
+            <p id="skill-wireframe">text. test. test.</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="javascript" id="skills-div" onclick="skillJavascript()">
+            <i class="fab fa-js-square" id="js-square" style="font-size: 60px;"></i>
+            <p class="skill-text javascript" id="java-script">JAVASCRIPT</p>
+            <p class="skill-js">text. test. test.</p>
+          </div>
         </div>
       </div>
-      <div class="col-md-3">
-        <div class="bootstrap" id="skills-div" onclick="skillBootstrap()">
-          <i class="fab fa-bootstrap" id="fa-bootstrap" style="font-size: 60px;"></i>
-          <p class="skill-text bootstrap" id="bootstrap-5">BOOTSTRAP</p>
-          <p id="skill-bootstrap">text. test. test.</p>
+      <div class="row g-2">
+        <div class="col-md-4">
+          <div class="react" id="skills-div" onclick="skillReact()">
+            <i class="fab fa-react" id="fa-react" style="font-size: 60px;"></i>
+            <p class="skill-text react" id="re-act">REACT</p>
+            <p class="skill-react">text. test. test.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="node" id="skills-div" onclick="skillNode()">
+            <i class="fab fa-node-js" id="fanodejs" style="font-size: 60px;"></i>
+            <p class="skill-text node" id="node-js">NODE.JS</p>
+            <p class="skill-node">text. test. test.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="git" id="skills-div" onclick="skillGit()">
+            <i class="fab fa-github" id="fagithub" style="font-size: 60px;"></i>
+            <p class="skill-text git" id="git-hub">GITHUB</p>
+            <p class="skill-git">text. test. test.</p>
+          </div>
         </div>
       </div>
-      <div class="col-md-3">
-        <div class="wireframe" id="skills-div" onclick="skillWireframe()">
-          <i class="far fa-edit" id="fa-edit" style="font-size: 60px;"></i>
-          <p class="skill-text wireframe" id="wire-frame">WIREFRAMING</p>
-          <p id="skill-wireframe">text. test. test.</p>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="javascript" id="skills-div" onclick="skillJavascript()">
-          <i class="fab fa-js-square" id="js-square" style="font-size: 60px;"></i>
-          <p class="skill-text javascript" id="java-script">JAVASCRIPT</p>
-          <p class="skill-js">text. test. test.</p>
-        </div>
-      </div>
-    </div>
-    <div class="row g-2">
-      <div class="col-md-4">
-        <div class="react" id="skills-div" onclick="skillReact()">
-          <i class="fab fa-react" id="fa-react" style="font-size: 60px;"></i>
-          <p class="skill-text react" id="re-act">REACT</p>
-          <p class="skill-react">text. test. test.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="node" id="skills-div" onclick="skillNode()">
-          <i class="fab fa-node-js" id="fanodejs" style="font-size: 60px;"></i>
-          <p class="skill-text node" id="node-js">NODE.JS</p>
-          <p class="skill-node">text. test. test.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="git" id="skills-div" onclick="skillGit()">
-          <i class="fab fa-github" id="fagithub" style="font-size: 60px;"></i>
-          <p class="skill-text git" id="git-hub">GITHUB</p>
-          <p class="skill-git">text. test. test.</p>
-        </div>
-      </div>
-    </div>
-    </div>
+  </div>
   </section>
 
   <!-- <div class="container d-flex justify-content-xxl-around">
