updating hero.css, index.html, index.js, navbar.css

--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
     </div>
   </div>
   <!-- HERO LANDING PAGE -->
-
-  <img src="./assets/FinalBackgroundImageLarge.jpeg" class=img-fluid alt="Responsive image">
-
-  <!-- <div class="jumbotron">
-    <div class="container" <div class="jumbotron jumbotron-image">
-      <div class="container">
+  <div id="container" style="background-color: black;">
+    <img id="background-image" src="./assets/FinalBackgroundImageLarge.jpeg" class='img-fluid'>
+    <img id="logo" src="./assets/LogoWhite.png">
+  </div>
+  <!-- <img ide="" <div class="jumbotron">
+    <div class="container" <div class="jumbotron jumbotron-image"> -->
+  <!-- <div class="container">
         <div class="bg-image style=" background-image: url('./assets/FinalBackgroundImageLarge.jpeg')
           background-position: center center; background-repeat: no-repeat; background-size: cover; height: 100vh;
           width: 100%;">
@@ -82,44 +83,44 @@
       </div>
     </div>
   </div> -->
-
-  <!-- ABOUT ME -->
-  <section id="about-me">
-    <div class="container">
-      <h1 class="about-me-title">About Me</h1>
-      <div class="row">
-        <div class="col-md-4">
-          <p class="para"></p>
-          Boggarts lavender robes, Hermione Granger Fantastic Beasts and
-          Where to Find Them. Bee in your bonnet Hand of Glory elder wand,
-          spectacles House Cup Bertie Bott’s Every Flavor Beans
-          Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir
-          mewing kittens Remus Lupin. Palominos scarlet train black robes,
-          Metamorphimagus Niffler dead easy second bedroom. Padma and
-          Parvati Sorting Hat Minister of Magic blue turban remember my
-          last.
-        </div>
-        <div class="col-md-4">
-          <p class="para"></p>
-          Half-giant jinxes peg-leg gillywater broken glasses large black
-          dog Great Hall. Nearly-Headless Nick now string them together,
-          and answer me this, which creature would you be unwilling to
-          kiss? Poltergeist sticking charm, troll umbrella stand flying
-          cars golden locket Lily Potter. Pumpkin juice Trevor wave your
-          wand out glass orbs, a Grim knitted hats. Stan Shunpike doe
-          patronus, suck his soul Muggle-Born large order of drills the
-          trace. Bred in captivity fell through the veil, quaffle blue
-          flame ickle diddykins Aragog. Yer a wizard, Harry Doxycide the
-          woes of Mrs. Weasley Goblet of Fire.
-        </div>
-        <div class="col-md-4">
-          <p class="para"></p>
-          Shameless self-promo with github and LinkedIn links and link to
-          portolio later on down page
+  <div class="container">
+    <!-- ABOUT ME -->
+    <section id="about-me">
+      <div class="container">
+        <h1 class="about-me-title">About Me</h1>
+        <div class="row">
+          <div class="col-md-4">
+            <p class="para"></p>
+            Boggarts lavender robes, Hermione Granger Fantastic Beasts and
+            Where to Find Them. Bee in your bonnet Hand of Glory elder wand,
+            spectacles House Cup Bertie Bott’s Every Flavor Beans
+            Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir
+            mewing kittens Remus Lupin. Palominos scarlet train black robes,
+            Metamorphimagus Niffler dead easy second bedroom. Padma and
+            Parvati Sorting Hat Minister of Magic blue turban remember my
+            last.
+          </div>
+          <div class="col-md-4">
+            <p class="para"></p>
+            Half-giant jinxes peg-leg gillywater broken glasses large black
+            dog Great Hall. Nearly-Headless Nick now string them together,
+            and answer me this, which creature would you be unwilling to
+            kiss? Poltergeist sticking charm, troll umbrella stand flying
+            cars golden locket Lily Potter. Pumpkin juice Trevor wave your
+            wand out glass orbs, a Grim knitted hats. Stan Shunpike doe
+            patronus, suck his soul Muggle-Born large order of drills the
+            trace. Bred in captivity fell through the veil, quaffle blue
+            flame ickle diddykins Aragog. Yer a wizard, Harry Doxycide the
+            woes of Mrs. Weasley Goblet of Fire.
+          </div>
+          <div class="col-md-4">
+            <p class="para"></p>
+            Shameless self-promo with github and LinkedIn links and link to
+            portolio later on down page
+          </div>
         </div>
       </div>
-    </div>
-    </div>
+  </div>
   </section>
 
   <!-- MY CREDO -->
@@ -195,104 +196,7 @@
     </div>
     </section>
 
-    <hr style="width: 100%; color: var(--indigo)" />
-
-    <!-- SKILLSET -->
-    <!-- <section id="skillset-wrapper" class="container skillset-container">
-      <h1 class="h1-my-skillset">My Skill Set</h1>
-        <div class="row">
-          <div class="col-md-3">
-            <div class="html5css" id="skills-div" onclick="skillHTML()">
-              <i
-                class="fab fa-html5"
-                id="fa-html5"
-                style="font-size: 60px;"
-              ></i>
-              <p class="skill-text html5css" id="html-css">HTML & CSS</p>
-              <p id="skill-html">text. test. test.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-          <div class="col-md-3">
-            <div class="bootstrap" id="skills-div" onclick="skillBootstrap()">
-              <i
-                class="fab fa-bootstrap"
-                id="fa-bootstrap"
-                style="font-size: 60px;"
-              ></i>
-              <p class="skill-text bootstrap" id="bootstrap-5">BOOTSTRAP</p>
-              <p id="skill-bootstrap">text. test. test.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-          <div class="col-md-3">
-            <div class="wireframe" id="skills-div" onclick="skillWireframe()">
-              <i class="far fa-edit" id="fa-edit" style="font-size: 60px;"></i>
-              <p class="skill-text wireframe" id="wire-frame">WIREFRAMING</p>
-              <p id="skill-wireframe">text. test. test.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-          <div class="col-md-3">
-            <div class="javascript" id="skills-div" onclick="skillJavascript()">
-              <i
-                class="fab fa-js-square"
-                id="js-square"
-                style="font-size: 60px;"
-              ></i>
-              <p class="skill-text javascript" id="java-script">JAVASCRIPT</p>
-              <p class="skill-js">text. test. test.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-          <div class="row">
-          <div class="col-md-4">
-            <div class="react" id="skills-div" onclick="skillReact()">
-              <i
-                class="fab fa-react"
-                id="fa-react"
-                style="font-size: 60px;"
-              ></i>
-              <p class="skill-text react" id="re-act">REACT</p>
-              <p class="skill-react">text. test. test.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-          <div class="col-me-4">
-            <div class="node" id="skills-div" onclick="skillNode()">
-              <i
-                class="fab fa-node-js"
-                id="fanodejs"
-                style="font-size: 60px;"
-              ></i>
-              <p class="skill-text node" id="node-js">NODE.JS</p>
-              <p class="skill-node">text. test. test.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-          <div class="col-md-4">
-            <div class="git" id="skills-div" onclick="skillGit()">
-              <i
-                class="fab fa-github"
-                id="fagithub"
-                style="font-size: 60px;"
-              ></i>
-              <p class="skill-text git" id="git-hub">GITHUB</p>
-              <p class="skill-git">text. test. test.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
+    <!-- MY SKILLSET -->
     <section id="skillset-wrapper" class="container skillset-container section-padding">
       <h1 class="h1-my-skillset">My Skill Set</h1>
       <div class="row g-2">
@@ -335,7 +239,7 @@
         </div>
         <div class="col-md-4">
           <div class="node" id="skills-div" onclick="skillNode()">
-            <i class="fab fa-node-js" id="fanodejs" style="font-size: 60px;"></i>
+            <i class="fab fa-node-js" class="fanodejs" style="font-size: 60px;"></i>
             <p class="skill-text node" id="node-js">NODE.JS</p>
             <p class="skill-node">text. test. test.</p>
           </div>
@@ -350,14 +254,6 @@
       </div>
   </div>
   </section>
-
-  <!-- <div class="container d-flex justify-content-xxl-around">
-        <div class="row">
-        </div>
-      </div>
-    </div>
-    </div> -->
-
   <!-- My Portfolio -->
 
   <!-- Insert link to project and stylize thumbnail -->
