--- a/index.html
+++ b/index.html
@@ -123,8 +123,10 @@
   </div>
   </section>
 
+  <hr />
+
   <!-- MY CREDO -->
-  <div class="container section-padding">
+  <div class="container">
     <h1 class="my-credo-title">My Credo</h1>
     <div class="row g-2">
       <div class="col-md-3">
@@ -194,66 +196,69 @@
         </div>
       </div>
     </div>
-    </section>
-
-    <!-- MY SKILLSET -->
-    <section id="skillset-wrapper" class="container skillset-container section-padding">
-      <h1 class="h1-my-skillset">My Skill Set</h1>
-      <div class="row g-2">
-        <div class="col-md-3">
-          <div class="html5css" id="skills-div" onclick="skillHTML()">
-            <i class="fab fa-html5" id="fa-html5" style="font-size: 60px;"></i>
-            <p class="skill-text html5css" id="html-css">HTML & CSS</p>
-            <p id="skill-html">text. test. test.</p>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="bootstrap" id="skills-div" onclick="skillBootstrap()">
-            <i class="fab fa-bootstrap" id="fa-bootstrap" style="font-size: 60px;"></i>
-            <p class="skill-text bootstrap" id="bootstrap-5">BOOTSTRAP</p>
-            <p id="skill-bootstrap">text. test. test.</p>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="wireframe" id="skills-div" onclick="skillWireframe()">
-            <i class="far fa-edit" id="fa-edit" style="font-size: 60px;"></i>
-            <p class="skill-text wireframe" id="wire-frame">WIREFRAMING</p>
-            <p id="skill-wireframe">text. test. test.</p>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="javascript" id="skills-div" onclick="skillJavascript()">
-            <i class="fab fa-js-square" id="js-square" style="font-size: 60px;"></i>
-            <p class="skill-text javascript" id="java-script">JAVASCRIPT</p>
-            <p class="skill-js">text. test. test.</p>
-          </div>
-        </div>
-      </div>
-      <div class="row g-2">
-        <div class="col-md-4">
-          <div class="react" id="skills-div" onclick="skillReact()">
-            <i class="fab fa-react" id="fa-react" style="font-size: 60px;"></i>
-            <p class="skill-text react" id="re-act">REACT</p>
-            <p class="skill-react">text. test. test.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="node" id="skills-div" onclick="skillNode()">
-            <i class="fab fa-node-js" class="fanodejs" style="font-size: 60px;"></i>
-            <p class="skill-text node" id="node-js">NODE.JS</p>
-            <p class="skill-node">text. test. test.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="git" id="skills-div" onclick="skillGit()">
-            <i class="fab fa-github" id="fagithub" style="font-size: 60px;"></i>
-            <p class="skill-text git" id="git-hub">GITHUB</p>
-            <p class="skill-git">text. test. test.</p>
-          </div>
-        </div>
-      </div>
   </div>
+
+  <hr />
+
+  <!-- SKILLS -->
+  <section class="container">
+    <h1 class="h1-my-skillset">Skills:</h1>
+    <div class="row g-2">
+      <div class="col-md-3">
+        <div class="html5css" id="skills-div" onclick="skillHTML()">
+          <i class="fab fa-html5" id="fa-html5" style="font-size: 60px;"></i>
+          <p class="skill-text-html5css" id="html-css">HTML & CSS</p>
+          <p id="skill-html">text. test. test.</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="bootstrap" id="skills-div" onclick="skillBootstrap()">
+          <i class="fab fa-bootstrap" id="fa-bootstrap" style="font-size: 60px;"></i>
+          <p class="skill-text-bootstrap" id="bootstrap-5">BOOTSTRAP</p>
+          <p id="skill-bootstrap">text. test. test.</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="wireframe" id="skills-div" onclick="skillWireframe()">
+          <i class="far fa-edit" id="fa-edit" style="font-size: 60px;"></i>
+          <p class="skill-text-wireframe" id="wire-frame">WIREFRAMING</p>
+          <p id="skill-wireframe">text. test. test.</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="javascript" id="skills-div" onclick="skillJavascript()">
+          <i class="fab fa-js-square" id="js-square" style="font-size: 60px;"></i>
+          <p class="skill-text-javascript" id="java-script">JAVASCRIPT</p>
+          <p class="skill-js">text. test. test.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row g-2">
+      <div class="col-md-4">
+        <div class="react" id="skills-div" onclick="skillReact()">
+          <i class="fab fa-react" id="fa-react" style="font-size: 60px;"></i>
+          <p class="skill-text-react" id="re-act">REACT</p>
+          <p class="skill-react">text. test. test.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="node" id="skills-div" onclick="skillNode()">
+          <i class="fab fa-node-js" class="fanodejs" style="font-size: 60px;"></i>
+          <p class="skill-text-node" id="node-js">NODE.JS</p>
+          <p class="skill-node">text. test. test.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="git" id="skills-div" onclick="skillGit()">
+          <i class="fab fa-github" id="fagithub" style="font-size: 60px;"></i>
+          <p class="skill-text-git" id="git-hub">GITHUB</p>
+          <p class="skill-git">text. test. test.</p>
+        </div>
+      </div>
+    </div>
   </section>
+
+  <hr />
   <!-- My Portfolio -->
 
   <!-- Insert link to project and stylize thumbnail -->
