uploading modified index.html, deleted portfolio.css and new projects.css

--- a/index.html
+++ b/index.html
@@ -62,27 +62,7 @@
     <img id="background-image" src="./assets/FinalBackgroundImageLarge.jpeg" class='img-fluid'>
     <img id="logo" src="./assets/LogoWhite.png">
   </div>
-  <!-- <img ide="" <div class="jumbotron">
-    <div class="container" <div class="jumbotron jumbotron-image"> -->
-  <!-- <div class="container">
-        <div class="bg-image style=" background-image: url('./assets/FinalBackgroundImageLarge.jpeg')
-          background-position: center center; background-repeat: no-repeat; background-size: cover; height: 100vh;
-          width: 100%;">
-        </div>
-      </div>
-    </div> -->
 
-  <!-- JUMBOTRON -->
-  <!-- <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <div class="bg-image" style="background-image: url('./assets/FinalBackgroundImageLarge.jpeg') fixed;
-      height: 100vh; background-size: cover; width: 100%;">
-        <div class="logo-image"
-          style="background-image: url('./assets/LogoWhite.png'); height: auto; width: 100%; max-width: 400px">
-        </div>
-      </div>
-    </div>
-  </div> -->
   <div class="container">
     <!-- ABOUT ME -->
     <section id="about-me">
@@ -259,14 +239,47 @@
   </section>
 
   <hr />
-  <!-- My Portfolio -->
+  <!-- PORTFOLIO: -->
+  <section class="portfolio">
+    <div class="container">
+      <h1 class="h1-projects" id="portfolio-projects">Portfolio</h1>
+      <div class="row g-2 projectGallery two-row-by-3-columns-gallery"></div>
+      <div class="col-md-3">
+        <a class="project-box" href="https://codepen.io/courtneydowns/pen/gOmRPoL" target="blank">
+          <img class="img-fluid" alt>
+          <div class="portfolio-project-caption">
+            <div class="portfolio-project-caption-content">
+              <div class="portfolio-project-name"> Harry Potter: </div>
+              <div class="portfolio-project-subname"> The Pure CSS Wizard</div>
+              <div class="portfolio-project-description">
+                A CSS creation using only CodePen
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3">
+        <a class="project-box" href="https://codepen.io/courtneydowns/pen/gOmRPoL" target="blank">
+          <img class="img-fluid" alt>
+          <div class="portfolio-project-caption">
+            <div class="portfolio-project-caption-content">
+              <div class="portfolio-project-name"> Harry Potter: </div>
+              <div class="portfolio-project-subname"> The Pure CSS Wizard</div>
+              <div class="portfolio-project-description">
+                A CSS creation using only CodePen
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
 
-  <!-- Insert link to project and stylize thumbnail -->
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-  </script>
-  <script src="./index.js"></script>
+      <!-- Insert link to project and stylize thumbnail -->
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+      </script>
+      <script src="./index.js"></script>
 </body>
 
 </html>
