--- a/index.html
+++ b/index.html
@@ -240,46 +240,33 @@
 
   <hr />
   <!-- PORTFOLIO: -->
-  <section class="portfolio">
-    <div class="container">
-      <h1 class="h1-projects" id="portfolio-projects">Portfolio</h1>
-      <div class="row g-2 projectGallery two-row-by-3-columns-gallery"></div>
+  <div class="row g-2">
+    <div class="col-md-3">
       <div class="col-md-3">
-        <a class="project-box" href="https://codepen.io/courtneydowns/pen/gOmRPoL" target="blank">
-          <img class="img-fluid" alt>
-          <div class="portfolio-project-caption">
-            <div class="portfolio-project-caption-content">
-              <div class="portfolio-project-name"> Harry Potter: </div>
-              <div class="portfolio-project-subname"> The Pure CSS Wizard</div>
-              <div class="portfolio-project-description">
-                A CSS creation using only CodePen
-              </div>
-            </div>
-          </div>
-        </a>
+        <div class="col-md-3">
+        </div>
       </div>
-      <div class="col-md-3">
-        <a class="project-box" href="https://codepen.io/courtneydowns/pen/gOmRPoL" target="blank">
-          <img class="img-fluid" alt>
-          <div class="portfolio-project-caption">
-            <div class="portfolio-project-caption-content">
-              <div class="portfolio-project-name"> Harry Potter: </div>
-              <div class="portfolio-project-subname"> The Pure CSS Wizard</div>
-              <div class="portfolio-project-description">
-                A CSS creation using only CodePen
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
+    </div>
 
 
-      <!-- Insert link to project and stylize thumbnail -->
+  </div>
+  <div class="row g-2">
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-3">
+    </div>
+  </div>
+  </div>
+  </section>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-      </script>
-      <script src="./index.js"></script>
+  <!-- Insert link to project and stylize thumbnail -->
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+  </script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
